2006-05-06  David Hampton  <hampton@employees.org>

	* lib/libqof/qof/qofbook.[ch]:
	* lib/libqof/qof/qofbook-p.h:
	* lib/libqof/qof/qofutil.c: Add support for directly marking the
	book dirty, for recording the time that the book transitioned from
	clean to dirty, and for calling back a registered function when
	the book transitions from clean to dirty.

	* configure.in: Can't use external qof until it supports
	"alternate dirty mode".

	* src/gnome-utils/dialog-commodity.c:
	* src/engine/gnc-lot.[ch]:
	* src/engine/gnc-commodity.[ch]:
	* src/engine/SchedXaction.[ch]: Add begin_edit/commit_edit
	brackets around object modifications.  Bug #339943 should be fixed
	as of this change.

	* src/engine/gnc-pricedb.c: No longer need special handling when
	marking prices as dirty.

	* src/engine/Account.c: Remove redundant setting an account dirty.
	Set collection clean/dirty functions.

	* src/engine/gnc-engine.c: Unconditionally enable qof alternate
	dirty mode.

	* lib/libqof/qof/qofbook.[ch]:
	* lib/libqof/qof/qofid-p.h:
	* lib/libqof/qof/qofinstance.[ch]:
	* lib/libqof/qof/qofid.[ch]:
	* lib/libqof/qof/qofutil.c: Add an alternate mode for handling the
	dirty state of instances and collections.  In this mode, marking
	an instance as dirty does not immediately mark the collection as
	dirty.  The collection is only dirtied when a dirty instance is
	actually committed to the collection.  Also add some debugging
	functions.

2006-05-05  David Hampton  <hampton@employees.org>

	* configure.in: Bump the version number for setting the
	GNOME_DISABLE_DEPRECATED flag.

2006-05-02  David Hampton  <hampton@employees.org>

	* src/backend/postgres/price.c:
	* src/business/business-core/gncJob.c:
	* src/business/business-core/gncInvoice.c:
	* src/business/business-core/gncVendor.c:
	* src/business/business-core/gncEntry.c:
	* src/business/business-core/gncCustomer.c:
	* src/business/business-core/gncBillTerm.c:
	* src/business/business-core/gncOrder.c: